<resources>
    <string name="app_name">Bupayment</string>
    <string name="studentLoginRollNoField">Enter Your Roll No</string>
    <string name="studentLoginPasswordField">Enter Your Password</string>
    <string name="title_activity_home">Bupayment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bu Online Payment</string>
    <string name="nav_header_subtitle">buonline@payment.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="form_fill_up_fee_form_title">Form fill up Fee Form</string>
    <string name="student_roll_no">Student Roll No :</string>
    <string name="student_roll">student_roll</string>
    <string name="student_regestration_no_title">Student Regestration No :</string>
    <string name="student_reg">student_reg</string>
    <string name="student_name_title">Student Name :</string>
    <string name="student_name">student_name</string>
    <string name="semester_title">Semester :</string>
    <string name="semester">semester</string>
    <string name="mother_s_name">mother\'s Name :</string>
    <string name="mother_name">mother_name</string>
    <string name="father_s_name">Father\'s Name :</string>
    <string name="father_name">father_name</string>
    <string name="department">Department :</string>
    <string name="department_name">department_name</string>
</resources>
